# cbl

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
cmake/: boost.cmake  googletest.cmake  utils.cmake
include/: CMakeLists.txt
include/adt/cbl/adt/: matrix.h  pool.h  priority_queue.h  unique_ptr.h
include/adt/cbl/adt/internal/: internal_priority_queue.h
include/cbl/: streamable.h
include/cbl/cbl/: debug_trace.h  debug_trace_toggle.h  macro.h  matrix.h  pool.h  span.h
include/cbl/cbl/adt/: idx.h  partitions.h  pool.h  small_vector.h  unique_ptr.h
include/cbl/cbl/adt/internal/: internal_priority_queue.h
include/cbl/cbl/io/: iomanip.h  iostream.h  ostream.h  streamable.h  tracing.h
include/cbl/cbl/io/internal/: ostream_internal.h  sfinae.h  tracing_internal.h
include/cbl/cbl/tr/: dbg.h  tr.h
include/cbl/cbl/tr/internal/: dbg_internal.h  tr_internal.h
include/debug/cbl/debug/: string_cursors.h
src/: CMakeLists.txt
src/adt/: CMakeLists.txt
src/cbl/: CMakeLists.txt
src/cbl/cbl/: debug_code.h  matrix.h  pool.h  priority_queue.h  streamable.h
src/cbl/cbl/private/: priority_queue_impl.h
src/cbl/io/: iostream.cpp
src/debug/: CMakeLists.txt  string_cursors.cpp
test/: CMakeLists.txt  test_debug_trace.cpp  test_streamable.cpp
test/adt/: CMakeLists.txt  test_idx.cpp  test_matrix.cpp  test_partitions.cpp  test_pool.cpp  test_priority_queue.cpp  test_small_vector.cpp  test_span.cpp  test_streamable.cpp  test_unique_ptr.cpp
test/cbl/: CMakeLists.txt  test_debug_trace.cpp  test_matrix.cpp  test_partitions.cpp  test_pool.cpp  test_small_vector.cpp  test_span.cpp  test_streamable.cpp
test/debug/: CMakeLists.txt  test_string_cursors.cpp
test/exp/: CMakeLists.txt  iaccessor.cpp  iaccessor.h  iaccessor_factory.h  iapply.cpp  iapply.h
test/exp/any/: any.h  any_impl.h  tests.cpp
test/exp/dispatch_apply/: CMakeLists.txt  add.cpp  add.h  dispatch_apply.cpp  dispatch_apply.h
test/exp/iaccessor/: iaccessor.cpp  iaccessor.h  iaccessor_factory.h  iapply.h  tests.cpp  unique_ptr.h
test/exp/rtti/: overload.cpp  tests.cpp  tests.h
test/io/: helpers.h  test_dbg.cpp  test_iomanip.cpp  test_ostream.cpp  test_streamable.cpp  test_tracing.cpp
test/stream/: test_streamable.cpp
test/tr/: test_dbg.cpp  test_tr.cpp
tools/: ctest.sh  lcov.sh
